# Tuff

./: .clang-format  .clang-tidy  .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmessage.txt  .jscpd.json  .jscpd.report.json  .madgerc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc  .project  .tuff_lints_baseline.json  AGENTS.md  AST_MIGRATION_PLAN.md  AST_REFACTOR_PLAN.md  BOOTSTRAP.md  CMakeLists.txt  CONTINUOUS_MODE.md  CPD-README.md  CPD.md  Cargo.toml  Compiler.cs  DebugEncode.java  DebugInstruction.java  DebugShift.java  ERROR_SPEC.md  FEATURES_MISSING.md  FEATURE_2_SUMMARY.md  FEATURE_3_PLAN.md  GRADLE_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LANGUAGE.md  LANGUAGE_REFERENCE.md  (+194 more)
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: README.md  check-line-count.ps1  pre-commit  pre-commit-wrapper  pre-commit.cmd  pre-commit.ps1  pre-commit.py
.github/: AGENTS.md  copilot-instructions.md
.husky/: .gitignore  pre-commit
Tuff.Tests/: CompilerTests.cs  Tuff.Tests.csproj
__tests__/: interpret.test.ts
agent/: .gitignore  conversation.json  index.ts  package.json  pnpm-lock.yaml
bootstrap/: CMakeLists.txt  README.md  ast.h  codegen_cpp.cpp  codegen_cpp.h  codegen_js.cpp  codegen_js.h  index.js  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  test_all_operators.tuff  test_all_ops.js  test_comparison_bool.tuff  test_immutable_reassign.tuff  test_mutable.tuff  test_simple.js  token.h  type_checker.cpp  type_checker.h
bootstrap/src/: build_config.cpp  codegen_cpp.cpp  codegen_cpp_helpers.cpp  codegen_cpp_old.cpp  codegen_js.cpp  compiler.cpp  file_utils.cpp  json_parser.cpp  lexer.cpp  main.cpp  parser.cpp  parser_expect_actual.cpp  parser_expressions.cpp  parser_modules.cpp  parser_statements.cpp  parser_types.cpp  test_comparison.cpp  test_simple.cpp  type_checker.cpp  type_checker_helpers.cpp  type_checker_intersection.cpp  type_checker_ownership.cpp  type_checker_register.cpp  type_checker_union.cpp  type_env.cpp
bootstrap/src/codegen/: codegen_cpp.cpp  codegen_cpp_block.cpp  codegen_cpp_decl.cpp  codegen_cpp_decl_typed.cpp  codegen_cpp_deps.cpp  codegen_cpp_expr.cpp  codegen_cpp_forward.cpp  codegen_cpp_header.cpp  codegen_cpp_helpers.cpp  codegen_cpp_intersection.cpp  codegen_cpp_keywords.cpp  codegen_cpp_scope.cpp  codegen_cpp_stmt.cpp  codegen_cpp_stmt_typed.cpp  codegen_cpp_typed.cpp  codegen_cpp_types.cpp  codegen_cpp_union.cpp  codegen_js.cpp  codegen_js_expr.cpp  codegen_js_helpers.cpp  codegen_js_stmt.cpp
bootstrap/src/include/: ast.h  ast_converter.h  ast_nodes.h  ast_type_converter.h  ast_typed.h  codegen_cpp.h  codegen_js.h  codegen_typed.h  compiler.h  expr.h  json_parser.h  lexer.h  parser.h  string_builtins.h  token.h  type_checker.h  type_env.h
bootstrap/src/include/ast/: ast.h  ast_converter.h  ast_node_types.h  ast_nodes.h  ast_typed.h
bootstrap/src/include/utils/: build_config.h  file_utils.h
bootstrap/src/parser/: parser_binary_ops.cpp  parser_expect_actual.cpp  parser_functions.cpp  parser_impl.cpp  parser_match.cpp  parser_modules.cpp  parser_primary.cpp  parser_statements.cpp  parser_types.cpp  parser_unary_postfix.cpp
bootstrap/src/type_checker/: type_checker_access.cpp  type_checker_alias.cpp  type_checker_binary.cpp  type_checker_call.cpp  type_checker_decl.cpp  type_checker_expr.cpp  type_checker_intersection.cpp  type_checker_multiple_of.cpp  type_checker_ownership.cpp  type_checker_register.cpp  type_checker_register_impl.cpp  type_checker_stmt.cpp  type_checker_struct.cpp  type_checker_subst.cpp  type_checker_types.cpp  type_checker_union.cpp
bootstrap/tests/: README.md  test_config.json  test_logical.tuff  test_string_basic.tuff
bootstrap/tests/feature10_pointers_arrays/: test_array_basic.tuff  test_pointer_mutable.tuff
bootstrap/tests/feature11_ownership/: test_copy_types.tuff  test_lifetime_basic.tuff  test_lifetime_elision.tuff  test_lifetime_multiple.tuff
bootstrap/tests/feature12_strings/: test_string_basic.tuff  test_string_escapes.tuff  test_string_single.tuff
bootstrap/tests/feature13_generic_extern/: basic_generic_extern.tuff
bootstrap/tests/feature13_unions/: test_is_returns_bool.tuff
bootstrap/tests/feature15_destructors/: test_destructor_nested.tuff
bootstrap/tests/feature16_type_aliases/: test_alias_with_destructor.tuff  test_basic_alias.tuff  test_generic_alias.tuff
bootstrap/tests/feature18_extern/: test_extern_abs.tuff
bootstrap/tests/feature19_multiple_of/: test_arithmetic.tuff  test_invalid_literal.tuff  test_literal_return.tuff  test_non_literal.tuff  test_to_base.tuff
bootstrap/tests/feature1_variables/: test_shadowing.tuff
bootstrap/tests/feature23_file_io/: test_file_basic.tuff
bootstrap/tests/feature2_operators/: test_all_operators.tuff
bootstrap/tests/feature3_control_flow/: test_continue.tuff  test_loop_break.tuff  test_nested_control.tuff  test_while.tuff
bootstrap/tests/feature4_structs/: test_struct_nested.tuff
bootstrap/tests/feature5_functions/: test_expression_body.tuff  test_recursion.tuff  test_void.tuff
bootstrap/tests/feature6_enums/: test_basic.tuff  test_scoped.tuff
bootstrap/tests/feature7_generics/: test_generic_function.cpp  test_generic_function.js  test_generic_struct.cpp  test_multiple_params.cpp  test_multiple_params.js  test_multiple_params.tuff
bootstrap/tests/feature8_expect_actual/: test_basic.tuff  test_missing_actual.tuff  test_qualified.tuff  test_signature_mismatch.tuff  test_with_params.tuff
bootstrap/tests/feature9_modules/: test_basic_module.tuff  test_module_with_struct.tuff  test_nested_module.tuff
bootstrap/tests/feature_vector/: test_vector_basic.tuff
bootstrap/tests/unit/: test.h  test_compiler.cpp
compiler/: AGENTS.md  README.md  Stop.ps1  conversation.json  eslint.config.js  eslint.config.ts  index.test.ts  index.ts  jest.config.js  package.json  pnpm-lock.yaml  tokenizer.ts  tsconfig.json  types.ts
core/: build.json
coverage/: lcov.info  (+1 more)
test_gen/: CMakeLists.txt  tuff_test_simple.cpp  tuff_test_simple.h
(+2042 files in other folders)
