[package]
name = "Tuff"
version = "0.1.0"
edition = "2021"

[dependencies]

[lints.clippy]
# Panic prevention
panic = "forbid"
# Error handling
unwrap_in_result = "deny"
unwrap_used = "deny"
expect_used = "deny"
# Function length
too_many_lines = "warn"
# File length enforcement via external tooling:
# Maximum file length: 500 lines (enforced via code review and custom scripts)
# Use: cargo build && wc -l src/*.rs to check file lengths